--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "git-commit-msg-linter": "^5.0.8",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   }
